tests/NormalTests/paczka1/fuzzy1/41107546.err
Error in line 7: 0dOwA S470 55,8
Error in line 15: ngY9 A94 95,6
Error in line 14: rFEPqB A292 250,3
Error in line 18: rFEPqB S470 50,4
Error in line 30: zt26m4 A94 45,0
